# plane-spotter

./: .gitignore  README.md  planespotter.service  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-quickstart.md  01-pi-setup.md  02-camera-setup.md  03-gps-uart-setup.md  03a-gps-wiring-diagram.html  04-opensky-api.md  05-next-steps.md  06-coding-conventions.md  07-systemd-autostart.md  plan.md
planespotter/: api.py  camera.py  database.py  flights.py  gpio.py  gps.py  main.py  matcher.py
planespotter/templates/: dashboard.html
tests/: test_api.py  test_database.py  test_flights.py  test_gps.py  test_matcher.py
